# prismriver

./: .gitignore  Cargo.toml  README.md
src/: audio_output.rs  decode.rs  lib.rs  main.rs  resampler.rs  utils.rs
src/decode/: ffmpeg.rs  midi.rs  mod.rs  rusty.rs
