[package]
name = "prismriver"
version = "0.1.0"
edition = "2021"

[dependencies]
colog = "1.3"
cpal = "0.15"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
log = "0.4"
rb = "0.4"
samplerate = "0.2"
symphonia = { version = "0.5", features = ["all-codecs", "opt-simd"] }
thiserror = "2.0"
