[package]
name = "prismriver"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", default-features = false }
colog = "1.3"
cpal = "0.15"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
fluent-uri = "0.3"
log = "0.4"
rb = "0.4"
samplerate = { git="https://github.com/G2-Games/rust-samplerate.git" }
thiserror = "2.0"
thread-priority = "1.2"

[dependencies.ffmpeg-next]
version = "7.1"
optional = true
features = [
    "build",
    "static",
    "build-lib-openssl",
    "build-license-gpl",
    "build-license-nonfree",
    "build-license-version3"
]

[dependencies.symphonia]
version = "0.5"
optional = true
features = ["all-codecs", "opt-simd"]

[features]
default = ["symphonia"]
symphonia = ["dep:symphonia"]
ffmpeg = ["dep:ffmpeg-next"]
all_backends = ["ffmpeg", "symphonia"]

[workspace.metadata.cross.build]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update",
    "apt-get install --assume-yes libasound2-dev:$CROSS_DEB_ARCH libssl-dev:$CROSS_DEB_ARCH",
    #libavutil-dev:$CROSS_DEB_ARCH libavformat-dev:$CROSS_DEB_ARCH libavcodec-dev:$CROSS_DEB_ARCH libavfilter-dev:$CROSS_DEB_ARCH libavdevice-dev:$CROSS_DEB_ARCH
]
